--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset='UTF-8'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <!-- <meta name='description' content='портфолио Юрия на Яндекс.Практикуме'> -->
+  <!-- <meta name='keywords' content='html, css, javascript'> -->
+  <meta name='author' content='Юрий Байрамуков'>
+  <link rel='stylesheet' href='https://code.s3.yandex.net/web-code/normalize.css'>
+  <link rel='stylesheet' href='./styles/style.css'>
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
     <header class="header">
-
+      <div class="logo logo_place_header"></div>
+      <h1 class="header__title">Научиться учиться</h1>
+      <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href="#" class="header__link">Узнать→</a>
+      </div>
+      <div class="square-pic"></div>
+      <div class="header__main-illustration"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -24,7 +35,7 @@
       </section>
     </main>
     <footer class="footer">
-
+      <!-- <div class="logo logo_place_footer"></div> -->
     </footer>
   </div>
 </body>
