--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang='ru'>
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
@@ -11,140 +11,143 @@
   <title>Научиться учиться</title>
 </head>
 <body>
-  <div class="page">
-    <header class="header">
-      <img src="./images/logo_place_header.svg" alt='Яндекс Практикум' class="logo logo_place_header">
-      <!-- <div class="logo logo_place_header"></div> -->
-      <h1 class="header__title">Научиться учиться</h1>
-      <h3 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &rarr;</a>
-      </h3>
-      <div class="header__square-pic"></div>
-      <img src='./images/header-image.png' alt="Опять двойка" class="header__main-illustration">
+  <div class='page'>
+    <header class='header'>
+      <img src='./images/logo_place_header.svg' alt='Яндекс Практикум' class='logo logo_place_header'>
+      <h1 class='header__title'>Научиться учиться</h1>
+      <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a href='#' class='header__link'>Узнать &rarr;</a>
+      </p>
+      <div class='header__square-pic'></div>
+      <img src='./images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
     </header>
-    <main class="content">
-      <section class="description">
-        <div class="two-colums">
-          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <div class="two-columns__main-text">
-            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__paragraph"><span class='two-columns__span-accent' >Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменит подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+    <main class='content'>
+      <section class='description'>
+        <div class='two-colums'>
+          <h2 class='two-columns__brief'>Главные проблемы в обучении</h2>
+          <div class='two-columns__main-text'>
+            <p class='two-columns__paragraph'>Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class='two-columns__paragraph'><span class='two-columns__span-accent' >Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class='two-columns__paragraph'>Конкретные техники и упражнения помогают изменит подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
         </div>
       </section>
-      <section class="digits information-content">
-        <h2 class="section section-title">Цифры и факты</h2>
-        <p class="section section-subtitle">Про учёбу и мозг</p>
-        <div class="table">
-          <div class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
+      <section class='digits'>
+        <h2 class='section-title'>Цифры и факты</h2>
+        <p class='section-subtitle'>Про учёбу и мозг</p>
+        <div class='table'>
+          <div class='table__cell'>
+            <h3 class='table__heading'>86 миллиардов</h3>
+            <p class='table__text'>Число нейронов в мозге человека</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>2,1 миллиарда</h3>
+            <p class='table__text'>Число нуждающихся в повышении квалификации</p>
+            <p class='table__text'>Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объем памяти человека</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>1000 терабайт</h3>
+            <p class='table__text'>Объем памяти человека</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>500 триллионов</h3>
+            <p class='table__text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">86 миллиардов</h3>
-            <p class="table__text">Число нейронов в мозге человека</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>86 миллиардов</h3>
+            <p class='table__text'>Число нейронов в мозге человека</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">2,1 миллиарда</h3>
-            <p class="table__text">Число нуждающихся в повышении квалификации</p>
-            <p class="table__text">Всемирный Банк, 2017</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>2,1 миллиарда</h3>
+            <p class='table__text'>Число нуждающихся в повышении квалификации</p>
+            <p class='table__text'>Всемирный Банк, 2017</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">1000 терабайт</h3>
-            <p class="table__text">Объем памяти человека</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>1000 терабайт</h3>
+            <p class='table__text'>Объем памяти человека</p>
           </div>
-          <div class="table__cell">
-            <h3 class="table__heading">500 триллионов</h3>
-            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <div class='table__cell'>
+            <h3 class='table__heading'>500 триллионов</h3>
+            <p class='table__text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
         </div>
       </section>
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <p class="feynman__subtitle">Выучить и незабыдь</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
-        <img src="./images/feynman.png" alt="Фейнман" class='feynman__main-illustration'>
+      <section class='feynman'>
+        <h2 class='feynman__title'>Метод Фейнмана</h2>
+        <p class='feynman__subtitle'>Выучить и незабыдь</p>
+        <a href='#' class='feynman__link'>Подробнее &rarr;</a>
+        <img src='./images/feynman.png' alt='Фейнман' class='feynman__main-illustration'>
       </section>
-      <section class="kaufman information-content">
-        <h2 class="section section-title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
-        <div class="table table_theme_dark">
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">1</h3>
-            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+      <section class='kaufman'>
+        <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
+        <p class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</p>
+        <div class='table table_theme_dark'>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>1</h3>
+            <p class='table__text table__text_theme_dark'>Выберите привлекательный проект.</p>
           </div>
-          <div class="table__cell table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">2</h3>
-            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          <div class='table__cell table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>2</h3>
+            <p class='table__text table__text_theme_dark'>Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">3</h3>
-            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>3</h3>
+            <p class='table__text table__text_theme_dark'>Определите целевой уровень мастерства.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">4</h3>
-            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>4</h3>
+            <p class='table__text table__text_theme_dark'>Разбейте навык на элементы.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">5</h3>
-            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>5</h3>
+            <p class='table__text table__text_theme_dark'>Приготовьте всё необходимое для занятий.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">6</h3>
-            <p class="table__text table__text_theme_dark">Устроните препятствия для занятий.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>6</h3>
+            <p class='table__text table__text_theme_dark'>Устроните препятствия для занятий.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">7</h3>
-            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>7</h3>
+            <p class='table__text table__text_theme_dark'>Выделите специальное время для занятий.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">8</h3>
-            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>8</h3>
+            <p class='table__text table__text_theme_dark'>Создайте быстрые петли обратной связи.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">9</h3>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>9</h3>
+            <p class='table__text table__text_theme_dark'>Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
-          <div class="table__cell table__cell_theme_dark">
-            <h3 class="table__heading table__heading_theme_dark">10</h3>
-            <p class="table__text table__text_theme_dark">Уделяйте внимание количество и скорости.</p>
+          <div class='table__cell table__cell_theme_dark'>
+            <h3 class='table__heading table__heading_theme_dark'>10</h3>
+            <p class='table__text table__text_theme_dark'>Уделяйте внимание количество и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class='kaufman__triangle'></div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="footer__columns">
-        <div class="footer__column footer__column_content-copyright">
-          <img src="./images/logo_place_footer.svg" alt='Яндекс Практикум' class="logo logo_place_footer">
-          <div class="footer__author"> &copy; 2019. Верстка - Юрий Байрамуков</div>
+    <footer class='footer'>
+      <div class='footer__columns'>
+        <div class='footer__column footer__column_content_copyright'>
+          <img src='./images/logo_place_footer.svg' alt='Яндекс Практикум' class='logo logo_place_footer'>
+          <p class='footer__author'> &copy; 2019. Верстка - Юрий Байрамуков</p>
         </div>
-        <div class="footer__column footer__column_content-info">
-          <div class="footer__column-heading">О практикуме</div>
-          <a href="#" class="footer__column-link">Главная</a>
-          <a href="#" class="footer__column-link">Концепции</a>
-          <a href="#" class="footer__column-link">Наставники</a>
-        </div>
-        <div class="footer__column footer__column_copyright-social">
-          <div class="footer__column-heading">Соцсети</div>
-          <a href="https://www.facebook.com/yandex.praktikum/" class="footer__column-link footer__social-icons" target="_blank"><img src='./images/facebook_color_white.svg' alt="Facebook" class="footer__social-icon_logo"> Facebook</a>
-          <a href="https://vk.com/yandex.praktikum" class="footer__column-link footer__social-icons" target="_blank"><img src='./images/vk_color_white.svg' alt="ВКонтакте" class="footer__social-icon_logo"> ВКонтакте</a>
-          <a href="https://www.instagram.com/yndx.praktikum/" class="footer__column-link footer__social-icons" target="_blank"><img src='./images/instagram_color_white.svg' alt="Instagram" class="footer__social-icon_logo"> Instagram</a>
-        </div>
+        <nav class='footer__column footer__column_content_info'>
+          <h3 class='footer__column-heading'>О практикуме</h3>
+          <ul class='footer__column-links'>
+            <li class='footer__column-item'><a href='#' class='footer__column-link'>Главная</a></li>
+            <li class='footer__column-item'><a href='#' class='footer__column-link'>Концепции</a></li>
+            <li class='footer__column-item'><a href='#' class='footer__column-link'>Наставники</a></li>
+          </ul>
+        </nav>
+        <nav class='footer__column footer__column_content_social'>
+          <h3 class='footer__column-heading'>Соцсети</h3>
+          <ul class='footer__column-links'>
+            <li class='footer__column-item'><a href='https://www.facebook.com/yandex.praktikum/' class='footer__column-link' target='_blank'><img src='./images/facebook_color_white.svg' alt='Facebook' class='footer__social-icon'> Facebook</a></li>
+            <li class='footer__column-item'><a href='https://vk.com/yandex.praktikum' class='footer__column-link' target='_blank'><img src='./images/vk_color_white.svg' alt='ВКонтакте' class='footer__social-icon'> ВКонтакте</a></li>
+            <li class='footer__column-item'><a href='https://www.instagram.com/yndx.praktikum/' class='footer__column-link' target='_blank'><img src='./images/instagram_color_white.svg' alt='Instagram' class='footer__social-icon'> Instagram</a></li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
