--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
   <meta name='description' content='Практическая работа №1 Юрия Байрамукова'>
   <meta name='keywords' content='практическая работа, я.практикум, html, css'>
   <meta name='author' content='Юрий Байрамуков'>
-  <link rel='stylesheet' href='./styles/normalize.css'>
-  <link rel='stylesheet' href='./styles/style.css'>
+  <link rel='stylesheet' href='./vendor/normalize.css'>
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
-<body>
+<body class="root">
   <div class='page'>
+
+
     <header class='header'>
       <img src='./images/logo_place_header.svg' alt='Яндекс Практикум' class='logo logo_place_header'>
       <h1 class='header__title'>Научиться учиться</h1>
       <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href='#' class='header__link'>Узнать &rarr;</a>
+        <a href='#' class='header__link link__hover'>Узнать &rarr;</a>
       </p>
-      <div class='header__square-pic'></div>
+      <div class='header__square-pic rotate'></div>
       <img src='./images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
     </header>
+
     <main class='content'>
+
       <section class='description'>
         <div class='two-colums'>
           <h2 class='two-columns__brief'>Главные проблемы в обучении</h2>
@@ -32,6 +36,68 @@
           </div>
         </div>
       </section>
+
+      <section class='techniques'>
+        <h2 class='section-title'>Техники и обучение</h2>
+        <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
+        <div class='cards'>
+          <div class='cards__item'>
+            <img src='./images/cards-attention.png' alt="Два вида внимания" class="cards__image">
+            <h3 class='cards__title'>Два вида внимания</h3>
+            <p class='cards__description'>Глубокие занния возникают, если чередовать сфокусированное и рассеянное мышление</p>
+          </div>
+          <div class='cards__item'>
+            <img src='./images/cards-recall.png' alt="Recall" class="cards__image">
+            <h3 class='cards__title'>Recall</h3>
+            <p class='cards__description'>Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='./images/cards-interliving.png' alt="Интерливинг" class="cards__image">
+            <h3 class='cards__title'>Интерливинг</h3>
+            <p class='cards__description'>Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='./images/cards-question.png' alt="Вопросы" class="cards__image">
+            <h3 class='cards__title'>Вопросы</h3>
+            <p class='cards__description'>Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </div>
+          <div class='cards__item'>
+            <img src='./images/cards-competence.png' alt="Иллюзия компетентности" class="cards__image">
+            <h3 class='cards__title'>Иллюзия компетентности</h3>
+            <p class='cards__description'>Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="video">
+        <h2 class='section-title'>Видео нa TED</h2>
+        <p class='section-subtitle'>Для тех, кто любит прокрастинировать</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley">
+        <div class='two-colums'>
+          <h2 class='two-columns__brief'>История Барбары Оакли</h2>
+          <div class='two-columns__main-text'>
+            <p class='two-columns__paragraph'>С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным.
+              В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
+              И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно
+              с первого взгляда.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class='feynman'>
+        <h2 class='feynman__title'>Метод Фейнмана</h2>
+        <p class='feynman__subtitle'>Выучить и незабыдь</p>
+        <a href='#' class='feynman__link'>Подробнее &rarr;</a>
+        <img src='./images/feynman.png' alt='Фейнман' class='feynman__main-illustration'>
+      </section>
+
       <section class='digits'>
         <h2 class='section-title'>Цифры и факты</h2>
         <p class='section-subtitle'>Про учёбу и мозг</p>
@@ -72,12 +138,23 @@
           </div>
         </div>
       </section>
-      <section class='feynman'>
-        <h2 class='feynman__title'>Метод Фейнмана</h2>
-        <p class='feynman__subtitle'>Выучить и незабыдь</p>
-        <a href='#' class='feynman__link'>Подробнее &rarr;</a>
-        <img src='./images/feynman.png' alt='Фейнман' class='feynman__main-illustration'>
+
+      <section class="khan">
+        <div class="khan__conteiner">
+          <p class="khan__author">Салман Кхан</p>
+          <h3 class="khan__title">Весь мир - школа</h3>
+          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src='./images/khan-book.jpg' alt="Книга Салман Хан - Весь мир-школа" class="khan__book-pic">
+            <a href="" class="khan__buy-link">Купить книгу &rarr;</a>
+          </div>
+        </div>
       </section>
+
+
+
       <section class='kaufman'>
         <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
         <p class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</p>
@@ -123,8 +200,29 @@
             <p class='table__text table__text_theme_dark'>Уделяйте внимание количество и скорости.</p>
           </div>
         </div>
-        <div class='kaufman__triangle'></div>
+        <div class='kaufman__triangle rotate'></div>
       </section>
+
+      <section class="resources">
+        <h2 class='section-title'>Полезные ресурсы</h2>
+        <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
+        <!-- Пока самый рабочий вариант! -->
+          <div class="resources__logo-zone">
+          <a href='https://arzamas.academy/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-arzamas.svg" alt="Arzamas" class="resources__logo_arzamas" ></a>
+          <a href='https://nplus1.ru/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-n1.svg" alt="N1plus" class="resources__logo_n1" ></a>
+          <a href='https://strelka.com/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo_strelka" ></a>
+          <a href='https://polka.academy/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo_polka" ></a>
+        </div>
+        <!-- <div class="resources__logo-zone">
+          <a href='https://arzamas.academy/' class='resources__logo resources__logo_arzamas' target='_blank'></a>
+          <a href='https://nplus1.ru/' class='resources__logo resources__logo_n1' target='_blank'></a>
+          <a href='https://strelka.com/' class='resources__logo resources__logo_strelka' target='_blank'></a>
+          <a href='https://polka.academy/' class='resources__logo resources__logo_polka' target='_blank'></a>
+        </div> -->
+      </section>
+
+
+
     </main>
     <footer class='footer'>
       <div class='footer__columns'>
