--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
   <meta charset='UTF-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <meta name='description' content='Практическая работа №1 Юрия Байрамукова'>
+  <meta name='description' content='Практическая работа №1-2 Юрия Байрамукова'>
   <meta name='keywords' content='практическая работа, я.практикум, html, css'>
   <meta name='author' content='Юрий Байрамуков'>
-  <link rel='stylesheet' href='./vendor/normalize.css'>
   <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
 </head>
-<body class="root">
+<body>
   <div class='page'>
-
-
     <header class='header'>
       <img src='./images/logo_place_header.svg' alt='Яндекс Практикум' class='logo logo_place_header'>
       <h1 class='header__title'>Научиться учиться</h1>
@@ -23,9 +20,7 @@
       <div class='header__square-pic rotate'></div>
       <img src='./images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
     </header>
-
     <main class='content'>
-
       <section class='description'>
         <div class='two-colums'>
           <h2 class='two-columns__brief'>Главные проблемы в обучении</h2>
@@ -36,7 +31,6 @@
           </div>
         </div>
       </section>
-
       <section class='techniques'>
         <h2 class='section-title'>Техники и обучение</h2>
         <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
@@ -68,7 +62,6 @@
           </div>
         </div>
       </section>
-
       <section class="video">
         <h2 class='section-title'>Видео нa TED</h2>
         <p class='section-subtitle'>Для тех, кто любит прокрастинировать</p>
@@ -77,10 +70,9 @@
           <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
-
       <section class="oakley">
         <div class='two-colums'>
-          <h2 class='two-columns__brief'>История Барбары Оакли</h2>
+          <h2 class='two-columns__brief'>История Барбары Оакли.</h2>
           <div class='two-columns__main-text'>
             <p class='two-columns__paragraph'>С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным.
               В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику.
@@ -90,55 +82,52 @@
           </div>
         </div>
       </section>
-
       <section class='feynman'>
         <h2 class='feynman__title'>Метод Фейнмана</h2>
         <p class='feynman__subtitle'>Выучить и незабыдь</p>
         <a href='#' class='feynman__link'>Подробнее &rarr;</a>
         <img src='./images/feynman.png' alt='Фейнман' class='feynman__main-illustration'>
       </section>
-
       <section class='digits'>
         <h2 class='section-title'>Цифры и факты</h2>
         <p class='section-subtitle'>Про учёбу и мозг</p>
         <div class='table'>
-          <div class='table__cell'>
+          <div class='table__cell table__cell_theme_default'>
             <h3 class='table__heading'>86 миллиардов</h3>
             <p class='table__text'>Число нейронов в мозге человека</p>
           </div>
-          <div class='table__cell'>
+          <div class='table__cell table__cell_theme_default'>
             <h3 class='table__heading'>2,1 миллиарда</h3>
             <p class='table__text'>Число нуждающихся в повышении квалификации</p>
             <p class='table__text'>Всемирный Банк, 2017</p>
           </div>
-          <div class='table__cell'>
+          <div class='table__cell table__cell_theme_default'>
             <h3 class='table__heading'>1000 терабайт</h3>
             <p class='table__text'>Объем памяти человека</p>
           </div>
-          <div class='table__cell'>
+          <div class='table__cell table__cell_theme_default'>
             <h3 class='table__heading'>500 триллионов</h3>
             <p class='table__text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
-          <div class='table__cell'>
-            <h3 class='table__heading'>86 миллиардов</h3>
-            <p class='table__text'>Число нейронов в мозге человека</p>
-          </div>
-          <div class='table__cell'>
-            <h3 class='table__heading'>2,1 миллиарда</h3>
-            <p class='table__text'>Число нуждающихся в повышении квалификации</p>
+          <div class='table__cell table__cell_theme_default'>
+            <h3 class='table__heading'>420 миллионов</h3>
+            <p class='table__text'>Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
             <p class='table__text'>Всемирный Банк, 2017</p>
           </div>
-          <div class='table__cell'>
-            <h3 class='table__heading'>1000 терабайт</h3>
-            <p class='table__text'>Объем памяти человека</p>
+          <div class='table__cell table__cell_theme_default'>
+            <h3 class='table__heading'>17–20 лет</h3>
+            <p class='table__text'>Пик обучаемости</p>
           </div>
-          <div class='table__cell'>
-            <h3 class='table__heading'>500 триллионов</h3>
-            <p class='table__text'>Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          <div class='table__cell table__cell_theme_default'>
+            <h3 class='table__heading'>1885 год</h3>
+            <p class='table__text'>Открытие кривой забывания</p>
+          </div>
+          <div class='table__cell table__cell_theme_default'>
+            <h3 class='table__heading'>1889 год</h3>
+            <p class='table__text'>Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
-
       <section class="khan">
         <div class="khan__conteiner">
           <p class="khan__author">Салман Кхан</p>
@@ -152,9 +141,6 @@
           </div>
         </div>
       </section>
-
-
-
       <section class='kaufman'>
         <h2 class='section-title section-title_theme_dark'>Принципы обучения</h2>
         <p class='section-subtitle section-subtitle_theme_dark'>от Джоша Кауфмана</p>
@@ -202,27 +188,16 @@
         </div>
         <div class='kaufman__triangle rotate'></div>
       </section>
-
       <section class="resources">
         <h2 class='section-title'>Полезные ресурсы</h2>
         <p class='section-subtitle'>Больше материалов о техниках и лайфхаках обучения</p>
-        <!-- Пока самый рабочий вариант! -->
           <div class="resources__logo-zone">
           <a href='https://arzamas.academy/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-arzamas.svg" alt="Arzamas" class="resources__logo_arzamas" ></a>
           <a href='https://nplus1.ru/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-n1.svg" alt="N1plus" class="resources__logo_n1" ></a>
           <a href='https://strelka.com/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-strelka.svg" alt="Strelka" class="resources__logo_strelka" ></a>
           <a href='https://polka.academy/' class='resources__logo ' target='_blank'><img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo_polka" ></a>
         </div>
-        <!-- <div class="resources__logo-zone">
-          <a href='https://arzamas.academy/' class='resources__logo resources__logo_arzamas' target='_blank'></a>
-          <a href='https://nplus1.ru/' class='resources__logo resources__logo_n1' target='_blank'></a>
-          <a href='https://strelka.com/' class='resources__logo resources__logo_strelka' target='_blank'></a>
-          <a href='https://polka.academy/' class='resources__logo resources__logo_polka' target='_blank'></a>
-        </div> -->
       </section>
-
-
-
     </main>
     <footer class='footer'>
       <div class='footer__columns'>
