--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <img src='./images/logo_place_header.svg' alt='Яндекс Практикум' class='logo logo_place_header'>
       <h1 class='header__title'>Научиться учиться</h1>
       <p class='header__subtitle'>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href='#' class='header__link link__hover'>Узнать &rarr;</a>
+        <a href='#' class='header__link'>Узнать &rarr;</a>
       </p>
       <div class='header__square-pic rotate'></div>
       <img src='./images/header-image.png' alt='Опять двойка' class='header__main-illustration'>
@@ -36,27 +36,27 @@
         <p class='section-subtitle'>Пять практик от Барбары Оакли</p>
         <div class='cards'>
           <div class='cards__item'>
-            <img src='./images/cards-attention.png' alt="Два вида внимания" class="cards__image">
+            <img src='./images/cards-attention.png' alt="Два вида внимания - фокусированное и рассеянное" class="cards__image">
             <h3 class='cards__title'>Два вида внимания</h3>
-            <p class='cards__description'>Глубокие занния возникают, если чередовать сфокусированное и рассеянное мышление</p>
+            <p class='cards__description'>Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление</p>
           </div>
           <div class='cards__item'>
-            <img src='./images/cards-recall.png' alt="Recall" class="cards__image">
+            <img src='./images/cards-recall.png' alt="Recall - вспоминать изученное" class="cards__image">
             <h3 class='cards__title'>Recall</h3>
             <p class='cards__description'>Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class='cards__item'>
-            <img src='./images/cards-interliving.png' alt="Интерливинг" class="cards__image">
+            <img src='./images/cards-interliving.png' alt="Интерливинг - изучение нескольких навыков" class="cards__image">
             <h3 class='cards__title'>Интерливинг</h3>
             <p class='cards__description'>Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class='cards__item'>
-            <img src='./images/cards-question.png' alt="Вопросы" class="cards__image">
+            <img src='./images/cards-question.png' alt="Вопросы - преподавателям" class="cards__image">
             <h3 class='cards__title'>Вопросы</h3>
             <p class='cards__description'>Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class='cards__item'>
-            <img src='./images/cards-competence.png' alt="Иллюзия компетентности" class="cards__image">
+            <img src='./images/cards-competence.png' alt="Иллюзия компетентности - думаете, что вы все усвоили?" class="cards__image">
             <h3 class='cards__title'>Иллюзия компетентности</h3>
             <p class='cards__description'>Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
@@ -66,8 +66,8 @@
         <h2 class='section-title'>Видео нa TED</h2>
         <p class='section-subtitle'>Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
-          <iframe class="video__iframe" id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
         </div>
       </section>
       <section class="oakley">
@@ -84,7 +84,7 @@
       </section>
       <section class='feynman'>
         <h2 class='feynman__title'>Метод Фейнмана</h2>
-        <p class='feynman__subtitle'>Выучить и незабыдь</p>
+        <p class='feynman__subtitle'>Выучить и не забыть</p>
         <a href='#' class='feynman__link'>Подробнее &rarr;</a>
         <img src='./images/feynman.png' alt='Фейнман' class='feynman__main-illustration'>
       </section>
